Fixed: wflow-consoleweb - Datalist - Card layout does not align center. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/datalist8.css
+++ b/wflow-consoleweb/src/main/webapp/css/datalist8.css
@@ -261,7 +261,7 @@ body.rtl .dataList span.pagelinks{
 }
 .card-layout.card-layout-active table tbody {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 .card-layout.card-layout-active table,
